# auto-selfcontrol-rs

./: Cargo.toml  README.md  tests
src/: lib.rs  main.rs
src/lib/: config.rs  control.rs  mod.rs  plist.rs  utils.rs
src/lib/begin_block/: mod.rs  selfcontrol_api.rs
src/lib/config/: mod.rs  parse.rs
