[package]
name = "auto-selfcontrol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["cargo"] }
chrono = {version = "0.4.23", features= ["serde"]}
serde = {version= "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
core-foundation = "0.9.3"
main_error = "0.1.2"
